# AI-Chess-Coach

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ADDING_DETECTORS.md  ARCHITECTURE.md  COACHING_SELECTION.md  COACHING_SYSTEM.md  DATA_PIPELINE.md  DETECTOR_FRAMEWORK.md  DOMAIN_MODEL.md  ENGINE_VERIFICATION.md  IMPLEMENTATION_ORDER.md  LLM_GROUNDING.md  MVP_USAGE.md  ROADMAP.md  TASKS.md  TASKS_21_30.md  TASKS_21_31.md  TASKS_31_40.md  TESTING.md
docs/ADRs/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
src/ai_chess_coach/: __init__.py
tests/: __init__.py  test_package_import.py
tests/analysis/: test_pgn_loader.py  test_replay.py
tests/api/: test_app.py
tests/cli/: test_analyze_pgn.py  test_chat_pgn.py
tests/coaching/: __init__.py  test_chat_coach.py  test_coaching_moment_selector.py  test_evidence_formatter.py  test_llm_chat_coach.py  test_llm_client.py  test_llm_grounding.py  test_ollama_client.py  test_openai_client.py  test_prompt_builder.py  test_review_generator.py
tests/detectors/: test_detector_framework.py  test_fork_detector.py  test_hanging_piece_detector.py  test_knight_outpost_detector.py
tests/engine/: test_stockfish_engine.py  test_verifier.py
tests/features/: test_attack_map.py  test_defender_map.py  test_feature_store.py  test_piece_safety_feature.py  test_pinned_pieces.py
tests/models/: test_candidate_move.py  test_coaching_moment.py  test_detected_event.py  test_detected_pattern.py  test_engine_assessment.py  test_engine_score.py  test_event_metadata.py  test_event_type_metadata.py  (+4 more)
(+76 files in other folders)
