[project]
name = "ai-chess-coach"
version = "0.1.0"
description = "Personalized chess coaching through deterministic analysis and verified evidence."
requires-python = ">=3.12"
dependencies = [
    "python-chess>=1.999",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_chess_coach"]
